# LibC

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  libc.tag
.github/workflows/: main.yml
html/: aio_8c.html  aio_8c_source.html  aio_8h.html  aio_8h.js  aio_8h_source.html  annotated.html  annotated_dup.js  classes.html  crt0_8c.html  crt0_8c.js  crt0_8c_source.html  dir_220d2bd384b446346a1cdcf02b1b2295.html  dir_220d2bd384b446346a1cdcf02b1b2295.js  dir_317ea3797c15f4a1d9c156bc812661ca.html  dir_317ea3797c15f4a1d9c156bc812661ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d4251dc0763d776f1142466f3915fa04.html  dir_d4251dc0763d776f1142466f3915fa04.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f18dde614a303819b3d575c95d6c8a2f.html  dir_f18dde614a303819b3d575c95d6c8a2f.js  errno_8c.html  errno_8c_source.html  errno_8h.html  errno_8h.js  errno_8h_source.html  example_8c.html  example_8c.js  example_8c_source.html  example_8h.html  example_8h.js  example_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  (+130 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  (+49 more)
include/: aio.h  errno.h  libc_common.h  libc_platform_specifics.h  locale.h  platform.h  signal.h  stddef.h  stdint.h  stdlib.h  time.h  unistd.h
include/_platforms/: example.h  macos.h
include/sys/: stat.h  types.h  wait.h
latex/: aio_8c.tex  aio_8c_source.tex  aio_8h.tex  aio_8h_source.tex  annotated.tex  crt0_8c.tex  crt0_8c_source.tex  errno_8c.tex  errno_8c_source.tex  errno_8h.tex  errno_8h_source.tex  example_8c.tex  example_8c_source.tex  example_8h.tex  example_8h_source.tex  files.tex  libc__common_8h.tex  libc__common_8h_source.tex  libc__platform__specifics_8h.tex  libc__platform__specifics_8h_source.tex  locale_8c.tex  locale_8c_source.tex  locale_8h.tex  locale_8h_source.tex  macos_8h_source.tex  platform_8h_source.tex  refman.tex  signal_8c.tex  signal_8c_source.tex  signal_8h.tex  signal_8h_source.tex  stat_8c.tex  stat_8c_source.tex  stat_8h.tex  stat_8h_source.tex  stddef_8h.tex  stddef_8h_source.tex  stdint_8h.tex  stdint_8h_source.tex  stdlib_8h.tex  (+29 more)
man/man3/: __locale.3  _div.3  _ldiv.3  _lldiv.3  _platform_mcontext.3  _siginfo.3  _stack.3  _struct_platform_locale.3  _ucontext.3  aio.c.3  aio.h.3  aiocb.3  crt0.c.3  errno.c.3  errno.h.3  example.c.3  example.h.3  itimerspec.3  lconv.3  libc_common.h.3  libc_platform_specifics.h.3  locale.c.3  locale.h.3  sigaction.3  sigevent.3  signal.c.3  signal.h.3  sigval.3  stat.3  stat.c.3  stat.h.3  stddef.h.3  stdint.h.3  stdlib.h.3  time.c.3  time.h.3  timespec.3  tm.3  todo.3  types.h.3  (+1 more)
metrics/: functions.json  headers.json  lines.json
src/: aio.c  crt0.c  errno.c  locale.c  signal.c  time.c
src/_platforms/: example.c
src/sys/: stat.c
toolchain/: common.sh  lines.sh  make_documentation.sh  progress.sh
